# VoyageETA_pi

./: CMakeLists.txt  INSTALL_NOW.txt  LICENSE  README.md  build-windows.yml  testplugin_pi.cpp  testplugin_pi.h  tpUtils.cpp
.github/workflows/: build-windows.yml
scripts/: prepare-template.ps1
src/: CMakeLists.txt  testplugin_pi.cpp  testplugin_pi.h  tpControlDialogDef.cpp  voyage_eta_dialog.cpp  voyage_eta_dialog.h  voyage_eta_pi.cpp  voyage_eta_pi.h
